Refactor to server-first architecture
